--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,19 +3,8 @@
 @tailwind utilities;
 
 @layer components {
-    .infoText {
-        @apply p-4 bg-gray-700/50 rounded-lg max-w-[300px]
-    }
-
-    .button {
-        @apply rounded-lg px-5 py-3 text-sm 
-        flex items-center justify-center space-x-2
-        hover:bg-gray-700/70 cursor-pointer
-        text-gray-300 transition-all duration-200 ease-out
-    }
-
-    .roundButton {
-        @apply
-        inline-block px-6 py-2.5 bg-blue-600 text-white font-medium text-xs leading-tight uppercase rounded-full shadow-md hover:bg-blue-700 hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out
+    .heroButton {
+        @apply px-6 py-2 border-[#242424] rounded-full uppercase text-xs tracking-widest text-gray-500 
+        transition-all hover:border-[#F7AB0A]/40 hover:text-[#F7AB0A]/40
     }
 }
