--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,16 +3,16 @@
 @tailwind utilities;
 
 html {
-    scroll-behavior: smooth;
+  scroll-behavior: smooth;
 }
 
 @layer components {
-    .heroButton {
-        @apply border-[#242424] uppercase text-sm tracking-widest text-gray-400 
-        transition-all hover:border-[#F7AB0A]/40 hover:text-[#F7AB0A]/40
-    }
+  .heroButton {
+    @apply border-[#242424] uppercase text-lg tracking-widest text-gray-400 
+        transition-all hover:border-[#F7AB0A]/40 hover:text-[#F7AB0A]/40;
+  }
 
-    .contactInput {
-        @apply outline-none bg-slate-400/10 rounded-sm border-b px-7 py-4 border-[#242424] text-gray-500 placeholder-gray-500 transition-all focus:border-[#F7AB0A]/40 focus:text-[#F7AB0A]/40
-    }
+  .contactInput {
+    @apply outline-none bg-slate-400/10 rounded-sm border-b px-7 py-4 border-[#242424] text-gray-500 placeholder-gray-500 transition-all focus:border-[#F7AB0A]/40 focus:text-[#F7AB0A]/40;
+  }
 }
