--- a/styles/globals.css
+++ b/styles/globals.css
@@ -12,6 +12,11 @@ html {
         transition-all hover:border-[#F7AB0A]/40 hover:text-[#F7AB0A]/40;
   }
 
+  .homeButton {
+    @apply border-[#242424] uppercase text-sm md:text-xl tracking-wide text-gray-400 
+        transition-all hover:border-[#333333]/40 hover:opacity-75 hover:shadow-xl;
+  }
+
   .contactInput {
     @apply outline-none bg-slate-400/10 rounded-sm border-b px-7 py-4 border-[#242424] text-gray-500 placeholder-gray-500 transition-all focus:border-[#F7AB0A]/40 focus:text-[#F7AB0A]/40;
   }
