--- a/app/globals.css
+++ b/app/globals.css
@@ -19,7 +19,7 @@ body {
   background-color: rgb(11, 11, 11);
   overscroll-behavior: none;
   overflow: hidden;
-  color: #a0a0a0;
+  color: #333333;
 }
 
 
